@@ -1,10 +1,16 @@
 astroid==2.4.2
 colorama==0.4.4
+convertdate==2.3.0
+holidays==0.10.3
 isort==5.6.4
+korean-lunar-calendar==0.2.1
 lazy-object-proxy==1.4.3
 mccabe==0.6.1
 pylint==2.6.0
+PyMeeus==0.3.7
+pyperclip==1.8.1
 python-dateutil==2.8.1
+pytz==2020.4
 six==1.15.0
 toml==0.10.2
 wrapt==1.12.1
